--- a/Notebook_piquaf.ipynb
+++ b/Notebook_piquaf.ipynb
@@ -231,7 +231,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyx import *\n",
+    "\n",
+    "g = graph.graphxy(width=10)\n",
+    "g.plot(graph.data.file(\"x.dat\", x=1, y=2))\n",
+    "g.writeEPSfile(\"x\")"
+   ]
   }
  ],
  "metadata": {
