added pytest test for extools.py

--- a/Notebook_piquaf.ipynb
+++ b/Notebook_piquaf.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[40], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m     savetxt(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(cur_dir,data_file_list[ind]), column_stack([x, y]), fmt\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m%.4f\u001b[39;00m\u001b[39m\"\u001b[39m, delimiter\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     13\u001b[0m \u001b[39m# next create PxY graph\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m g \u001b[39m=\u001b[39m graph\u001b[39m.\u001b[39;49mgraphxy(width\u001b[39m=\u001b[39;49m\u001b[39m10\u001b[39;49m, title\u001b[39m=\u001b[39;49mtitle, x\u001b[39m=\u001b[39;49mgraph\u001b[39m.\u001b[39;49maxis\u001b[39m.\u001b[39;49mlinear(\u001b[39mmin\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m, \u001b[39mmax\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m50\u001b[39;49m, title\u001b[39m=\u001b[39;49mxlabel), y\u001b[39m=\u001b[39;49mgraph\u001b[39m.\u001b[39;49maxis\u001b[39m.\u001b[39;49mlinear(\u001b[39mmin\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m-\u001b[39;49m\u001b[39m0.5\u001b[39;49m, \u001b[39mmax\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m0.5\u001b[39;49m, title\u001b[39m=\u001b[39;49mylabel))\n\u001b[0;32m     15\u001b[0m \u001b[39mfor\u001b[39;00m ind, this_df \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(data_file_list):\n\u001b[0;32m     16\u001b[0m     g\u001b[39m.\u001b[39mplot(graph\u001b[39m.\u001b[39mdata\u001b[39m.\u001b[39mfile(this_df, x\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, y\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m))\n",
+      "Cell \u001b[1;32mIn[47], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m     savetxt(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(cur_dir,data_file_list[ind]), column_stack([x, y]), fmt\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m%.4f\u001b[39;00m\u001b[39m\"\u001b[39m, delimiter\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     13\u001b[0m \u001b[39m# next create PxY graph\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m g \u001b[39m=\u001b[39m graph\u001b[39m.\u001b[39;49mgraphxy(width\u001b[39m=\u001b[39;49m\u001b[39m10\u001b[39;49m, \n\u001b[0;32m     15\u001b[0m                 x\u001b[39m=\u001b[39;49mgraph\u001b[39m.\u001b[39;49maxis\u001b[39m.\u001b[39;49mlinear(\u001b[39mmin\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m, \u001b[39mmax\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m50\u001b[39;49m, title\u001b[39m=\u001b[39;49mxlabel), \n\u001b[0;32m     16\u001b[0m                 y\u001b[39m=\u001b[39;49mgraph\u001b[39m.\u001b[39;49maxis\u001b[39m.\u001b[39;49mlinear(\u001b[39mmin\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m-\u001b[39;49m\u001b[39m0.5\u001b[39;49m, \u001b[39mmax\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m0.5\u001b[39;49m), \n\u001b[0;32m     17\u001b[0m                 key\u001b[39m=\u001b[39;49mgraph\u001b[39m.\u001b[39;49mkey\u001b[39m.\u001b[39;49mkey(pos\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mbr\u001b[39;49m\u001b[39m\"\u001b[39;49m, dist\u001b[39m=\u001b[39;49m\u001b[39m0.1\u001b[39;49m),\n\u001b[0;32m     18\u001b[0m                 title\u001b[39m=\u001b[39;49mylabel)\n\u001b[0;32m     19\u001b[0m \u001b[39mfor\u001b[39;00m ind, this_df \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(data_file_list):\n\u001b[0;32m     20\u001b[0m     this_df[\u001b[39m'\u001b[39m\u001b[39mlabel\u001b[39m\u001b[39m'\u001b[39m]\n",
       "File \u001b[1;32mc:\\venvs\\piquaf\\lib\\site-packages\\pyx\\graph\\graph.py:355\u001b[0m, in \u001b[0;36mgraphxy.__init__\u001b[1;34m(self, xpos, ypos, width, height, ratio, key, backgroundattrs, axesdist, flipped, xaxisat, yaxisat, **kwargs)\u001b[0m\n\u001b[0;32m    353\u001b[0m \u001b[39mif\u001b[39;00m aaxis \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    354\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(aaxis, axis\u001b[39m.\u001b[39mlinkedaxis):\n\u001b[1;32m--> 355\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maxes[axisname] \u001b[39m=\u001b[39m axis\u001b[39m.\u001b[39;49manchoredaxis(aaxis, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtextengine, axisname)\n\u001b[0;32m    356\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    357\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maxes[axisname] \u001b[39m=\u001b[39m aaxis\n",
       "File \u001b[1;32mc:\\venvs\\piquaf\\lib\\site-packages\\pyx\\graph\\axis\\axis.py:566\u001b[0m, in \u001b[0;36manchoredaxis.__init__\u001b[1;34m(self, axis, graphtextengine, errorname)\u001b[0m\n\u001b[0;32m    564\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39merrorname \u001b[39m=\u001b[39m errorname\n\u001b[0;32m    565\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgraphtextengine \u001b[39m=\u001b[39m graphtextengine\n\u001b[1;32m--> 566\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata \u001b[39m=\u001b[39m axis\u001b[39m.\u001b[39;49mcreatedata(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39merrorname)\n\u001b[0;32m    567\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcanvas \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m    568\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpositioner \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'createdata'"
@@ -335,9 +335,17 @@
     "    savetxt(os.path.join(cur_dir,data_file_list[ind]), column_stack([x, y]), fmt=\"%.4f\", delimiter=\" \")\n",
     "\n",
     "# next create PxY graph\n",
-    "g = graph.graphxy(width=10, x=graph.axis.linear(min=0, max=50, title=xlabel), y=graph.axis.linear(min=-0.5, max=0.5, title=ylabel))\n",
+    "g = graph.graphxy(width=10, \n",
+    "                x=graph.axis.linear(min=0, max=50, title=xlabel), \n",
+    "                y=graph.axis.linear(min=-0.5, max=0.5), \n",
+    "                key=graph.key.key(pos=\"br\", dist=0.1),\n",
+    "                title=ylabel)\n",
     "for ind, this_df in enumerate(data_file_list):\n",
-    "    g.plot(graph.data.file(this_df, x=1, y=2))\n",
+    "    this_df['label']\n",
+    "    g.plot(graph.data.file(this_df, x=1, y=2, title=this_df['label']))\n",
+    "\n",
+    "c = canvas.canvas()\n",
+    "c.text(0, 5, r\"boxcenter\", [text.halign.boxcenter])\n",
     "\n",
     "g.writePDFfile(fname)\n",
     "    "
