added test_extools and test_plt2pyx

--- a/Notebook_piquaf.ipynb
+++ b/Notebook_piquaf.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,23 +304,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'createdata'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[47], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m     savetxt(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(cur_dir,data_file_list[ind]), column_stack([x, y]), fmt\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m%.4f\u001b[39;00m\u001b[39m\"\u001b[39m, delimiter\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     13\u001b[0m \u001b[39m# next create PxY graph\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m g \u001b[39m=\u001b[39m graph\u001b[39m.\u001b[39;49mgraphxy(width\u001b[39m=\u001b[39;49m\u001b[39m10\u001b[39;49m, \n\u001b[0;32m     15\u001b[0m                 x\u001b[39m=\u001b[39;49mgraph\u001b[39m.\u001b[39;49maxis\u001b[39m.\u001b[39;49mlinear(\u001b[39mmin\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m, \u001b[39mmax\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m50\u001b[39;49m, title\u001b[39m=\u001b[39;49mxlabel), \n\u001b[0;32m     16\u001b[0m                 y\u001b[39m=\u001b[39;49mgraph\u001b[39m.\u001b[39;49maxis\u001b[39m.\u001b[39;49mlinear(\u001b[39mmin\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m-\u001b[39;49m\u001b[39m0.5\u001b[39;49m, \u001b[39mmax\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m0.5\u001b[39;49m), \n\u001b[0;32m     17\u001b[0m                 key\u001b[39m=\u001b[39;49mgraph\u001b[39m.\u001b[39;49mkey\u001b[39m.\u001b[39;49mkey(pos\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mbr\u001b[39;49m\u001b[39m\"\u001b[39;49m, dist\u001b[39m=\u001b[39;49m\u001b[39m0.1\u001b[39;49m),\n\u001b[0;32m     18\u001b[0m                 title\u001b[39m=\u001b[39;49mylabel)\n\u001b[0;32m     19\u001b[0m \u001b[39mfor\u001b[39;00m ind, this_df \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(data_file_list):\n\u001b[0;32m     20\u001b[0m     this_df[\u001b[39m'\u001b[39m\u001b[39mlabel\u001b[39m\u001b[39m'\u001b[39m]\n",
-      "File \u001b[1;32mc:\\venvs\\piquaf\\lib\\site-packages\\pyx\\graph\\graph.py:355\u001b[0m, in \u001b[0;36mgraphxy.__init__\u001b[1;34m(self, xpos, ypos, width, height, ratio, key, backgroundattrs, axesdist, flipped, xaxisat, yaxisat, **kwargs)\u001b[0m\n\u001b[0;32m    353\u001b[0m \u001b[39mif\u001b[39;00m aaxis \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    354\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(aaxis, axis\u001b[39m.\u001b[39mlinkedaxis):\n\u001b[1;32m--> 355\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maxes[axisname] \u001b[39m=\u001b[39m axis\u001b[39m.\u001b[39;49manchoredaxis(aaxis, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtextengine, axisname)\n\u001b[0;32m    356\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    357\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maxes[axisname] \u001b[39m=\u001b[39m aaxis\n",
-      "File \u001b[1;32mc:\\venvs\\piquaf\\lib\\site-packages\\pyx\\graph\\axis\\axis.py:566\u001b[0m, in \u001b[0;36manchoredaxis.__init__\u001b[1;34m(self, axis, graphtextengine, errorname)\u001b[0m\n\u001b[0;32m    564\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39merrorname \u001b[39m=\u001b[39m errorname\n\u001b[0;32m    565\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgraphtextengine \u001b[39m=\u001b[39m graphtextengine\n\u001b[1;32m--> 566\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata \u001b[39m=\u001b[39m axis\u001b[39m.\u001b[39;49mcreatedata(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39merrorname)\n\u001b[0;32m    567\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcanvas \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m    568\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpositioner \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'createdata'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cur_dir = os.path.curdir\n",
     "\n",
@@ -338,14 +324,11 @@
     "g = graph.graphxy(width=10, \n",
     "                x=graph.axis.linear(min=0, max=50, title=xlabel), \n",
     "                y=graph.axis.linear(min=-0.5, max=0.5), \n",
-    "                key=graph.key.key(pos=\"br\", dist=0.1),\n",
-    "                title=ylabel)\n",
+    "                key=graph.key.key(pos=\"br\", dist=0.1))\n",
     "for ind, this_df in enumerate(data_file_list):\n",
-    "    this_df['label']\n",
-    "    g.plot(graph.data.file(this_df, x=1, y=2, title=this_df['label']))\n",
+    "    g.plot(graph.data.file(this_df, x=1, y=2, title=list_line[ind]['label']), styles=line_style)\n",
     "\n",
-    "c = canvas.canvas()\n",
-    "c.text(0, 5, r\"boxcenter\", [text.halign.boxcenter])\n",
+    "g.text(5, 5, title, [text.halign.boxcenter])\n",
     "\n",
     "g.writePDFfile(fname)\n",
     "    "
@@ -353,22 +336,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['graph_0.dat', 'graph_1.dat']"
+       "{'label': 'y1',\n",
+       " 'color': 'b',\n",
+       " 'draw_style': 'default',\n",
+       " 'line_style': '-',\n",
+       " 'line_width': 1.5,\n",
+       " 'x': array([  0.        ,   1.01010101,   2.02020202,   3.03030303,\n",
+       "          4.04040404,   5.05050505,   6.06060606,   7.07070707,\n",
+       "          8.08080808,   9.09090909,  10.1010101 ,  11.11111111,\n",
+       "         12.12121212,  13.13131313,  14.14141414,  15.15151515,\n",
+       "         16.16161616,  17.17171717,  18.18181818,  19.19191919,\n",
+       "         20.2020202 ,  21.21212121,  22.22222222,  23.23232323,\n",
+       "         24.24242424,  25.25252525,  26.26262626,  27.27272727,\n",
+       "         28.28282828,  29.29292929,  30.3030303 ,  31.31313131,\n",
+       "         32.32323232,  33.33333333,  34.34343434,  35.35353535,\n",
+       "         36.36363636,  37.37373737,  38.38383838,  39.39393939,\n",
+       "         40.4040404 ,  41.41414141,  42.42424242,  43.43434343,\n",
+       "         44.44444444,  45.45454545,  46.46464646,  47.47474747,\n",
+       "         48.48484848,  49.49494949,  50.50505051,  51.51515152,\n",
+       "         52.52525253,  53.53535354,  54.54545455,  55.55555556,\n",
+       "         56.56565657,  57.57575758,  58.58585859,  59.5959596 ,\n",
+       "         60.60606061,  61.61616162,  62.62626263,  63.63636364,\n",
+       "         64.64646465,  65.65656566,  66.66666667,  67.67676768,\n",
+       "         68.68686869,  69.6969697 ,  70.70707071,  71.71717172,\n",
+       "         72.72727273,  73.73737374,  74.74747475,  75.75757576,\n",
+       "         76.76767677,  77.77777778,  78.78787879,  79.7979798 ,\n",
+       "         80.80808081,  81.81818182,  82.82828283,  83.83838384,\n",
+       "         84.84848485,  85.85858586,  86.86868687,  87.87878788,\n",
+       "         88.88888889,  89.8989899 ,  90.90909091,  91.91919192,\n",
+       "         92.92929293,  93.93939394,  94.94949495,  95.95959596,\n",
+       "         96.96969697,  97.97979798,  98.98989899, 100.        ]),\n",
+       " 'y': array([ 0.        ,  0.10083842,  0.20064886,  0.2984138 ,  0.39313661,\n",
+       "         0.48385164,  0.56963411,  0.64960951,  0.72296256,  0.78894546,\n",
+       "         0.84688556,  0.8961922 ,  0.93636273,  0.96698762,  0.98775469,\n",
+       "         0.99845223,  0.99897117,  0.98930624,  0.96955595,  0.93992165,\n",
+       "         0.90070545,  0.85230712,  0.79522006,  0.73002623,  0.65739025,\n",
+       "         0.57805259,  0.49282204,  0.40256749,  0.30820902,  0.21070855,\n",
+       "         0.11106004,  0.01027934, -0.09060615, -0.19056796, -0.28858706,\n",
+       "        -0.38366419, -0.47483011, -0.56115544, -0.64176014, -0.7158225 ,\n",
+       "        -0.7825875 , -0.84137452, -0.89158426, -0.93270486, -0.96431712,\n",
+       "        -0.98609877, -0.99782778, -0.99938456, -0.99075324, -0.97202182,\n",
+       "        -0.94338126, -0.90512352, -0.85763861, -0.80141062, -0.73701276,\n",
+       "        -0.66510151, -0.58640998, -0.50174037, -0.41195583, -0.31797166,\n",
+       "        -0.22074597, -0.12126992, -0.0205576 ,  0.0803643 ,  0.18046693,\n",
+       "         0.27872982,  0.37415123,  0.46575841,  0.55261747,  0.63384295,\n",
+       "         0.7086068 ,  0.77614685,  0.83577457,  0.8868821 ,  0.92894843,\n",
+       "         0.96154471,  0.98433866,  0.99709789,  0.99969234,  0.99209556,\n",
+       "         0.97438499,  0.94674118,  0.90944594,  0.86287948,  0.8075165 ,\n",
+       "         0.74392141,  0.6727425 ,  0.59470541,  0.51060568,  0.42130064,\n",
+       "         0.32770071,  0.23076008,  0.13146699,  0.03083368, -0.07011396,\n",
+       "        -0.17034683, -0.26884313, -0.36459873, -0.45663749, -0.54402111])}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_file_list"
+    "list_line[0]"
    ]
   },
   {
